<resources>
    <string name="app_name">TheUpub</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Navigation Menu names-->
    <string name="Offers">Offers</string>
    <string name="Info">Info</string>
    <string name="Menu">Menu</string>
    <string name="Events">Events</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>


    <!--Intro screen titles-->
    <string name="title_activity_the_upub">TheUpub</string>
    <string name="EnterButton">ENTER</string>
    <string name="ENterAdm">Enter As\nAdministrator</string>
    <string name="ENterProf">Enter As\nMember</string>


    <!--Titles of Activities-->
    <string name="title_activity_upub_info">Info</string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_the_menu">Menu</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_administrator">Administrator</string>

    <!--Profile Activity-->
    <string name="DefaultPoints">0\nPoints</string>

    <!--Info Activity-->
    <string name="Info_Title_Andress">Andress:</string>
    <string name="Info_Andress">University Avenue 1 2109\n Nicosia,Cyprus</string>
    <string name="Info_Title_Telephone">Telephone:</string>
    <string name="Info_Telephone">22 895132</string>
    <string name="Info_Title_OpenHours">Open Hours:</string>
    <string name="Info_OpenHours">Mon-Fri 8:00am-12:00am\nSat-Sun 4:00pm-12:00pm</string>
    <string name="Info_Title_Parking">Parking:</string>
    <string name="Info_Parking">Availiable</string>
    <string name="Info_Title_Managers">Managers:</string>
    <string name="Info_Managers">Marios Christodoulou\nDimitris Karpasitis\nSavvas Anaksagorou</string>
    <string name="Info_Title_Services">Services:</string>
    <string name="Info_Services">Walks-Ins Welcome,Good For Groups and Outdoor Seating</string>
    <string name="Info_Title_Email">Email:</string>
    <string name="Info_Email">theupubcyprus@gmail.com</string>

    <!--Offer Activity-->
    <string-array name="OfferTitle">
        <item>Offer1</item>
        <item>Offer2</item>
        <item>Offer3</item>
        <item>Offer4</item>
        <item>Offer5</item>
        <item>Offer6</item>
        <item>Offer7</item>
        <item>Offer8</item>
        <item>Offer9</item>
    </string-array>


    <string-array name="OfferDescription">
        <item>Press To Expand Offer1</item>
        <item>Press To Expand Offer2</item>
        <item>Press To Expand Offer3</item>
        <item>Press To Expand Offer4</item>
        <item>Press To Expand Offer5</item>
        <item>Press To Expand Offer6</item>
        <item>Press To Expand Offer7</item>
        <item>Press To Expand Offer8</item>
        <item>Press To Expand Offer9</item>
    </string-array>


    <!--Menu Activity-->
    <string-array name="MenuTitle">
        <item>Shisha</item>
        <item>Keo</item>
        <item>Casberg</item>
        <item>Frappe</item>
        <item>Iced Latte</item>
        <item>Iced Tea</item>
        <item>Frezzy Lemonade</item>
        <item>Bubble Lemonade</item>
        <item>Soft Drinks</item>

        <item>Fresh Orange Juice</item>
        <item>Fresh Carrot Juice</item>
        <item>Fresh Apple Juice</item>
        <item>Milkshake</item>
        <item>Smoothies</item>

        <item>Espresso</item>
        <item>Double Espresso</item>
        <item>Cypriot Coffee</item>
        <item>Capuccino</item>
        <item>Hot Chocolate</item>
        <item>Coffee</item>
        <item>Latte</item>
        <item>Mocha</item>
        <item>Filter Coffee</item>


    </string-array>


    <string-array name="MenuDescription">
        <item>€7.00</item>
        <item>€2.00</item>
        <item>€2.00</item>

        <item>€1.25</item>
        <item>€1.50</item>
        <item>€2.00</item>
        <item>€1.50</item>
        <item>€1.50</item>
        <item>€1.70</item>
        <item>€1.00</item>

        <item>€2.00</item>
        <item>€2.50</item>
        <item>€2.50</item>
        <item>€2.50</item>
        <item>€3.00</item>

        <item>€1.00</item>
        <item>€1.50</item>
        <item>€0.90</item>
        <item>€1.50</item>
        <item>€2.50</item>
        <item>€1.25</item>
        <item>€2.00</item>
        <item>€2.00</item>
        <item>€1.50</item>

    </string-array>

    <!--Event Activity-->
    <string-array name="EventTitle">
        <item>Event1</item>
        <item>Event2</item>
        <item>Event3</item>
        <item>Event4</item>
        <item>Event5</item>
        <item>Event6</item>
        <item>Event7</item>
        <item>Event8</item>
        <item>Event9</item>
    </string-array>


    <string-array name="EventDescription">
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
        <item>Press To Expand Event</item>
    </string-array>
</resources>
