<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_Menu" android:icon="@drawable/menu"
            android:title="@string/Menu" />
        <item android:id="@+id/nav_Offers" android:icon="@drawable/offers"
            android:title="@string/Offers" />
        <item android:id="@+id/nav_Events" android:icon="@drawable/events"
            android:title="@string/Events" />
        <item android:id="@+id/nav_Profile" android:icon="@drawable/profile"
            android:title="@string/Profile" android:visible="false" />
        <item android:id="@+id/nav_Info" android:icon="@drawable/info"
        android:title="@string/Info" />
        <item android:id="@+id/nav_Logout" android:icon="@drawable/key"
            android:title="@string/Logout" android:visible="false" />
    </group>


</menu>